force-app/main/objects/InvoiceProductItem__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please enter a short description for the product line item.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Please enter the amount of discount allowed.</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field contains the Invoice Request No. of the invoice to which this product sale is linked. Please do not change the value in this field as it is auto-populated</inlineHelpText>
        <label>Invoice Request</label>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Product Items</relationshipLabel>
        <relationshipName>InvoiceProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_IM_Code__c</fullName>
        <inlineHelpText>Please enter the 13 digit Product Item Master Code</inlineHelpText>
        <label>Product IM Code</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Please enter the quantity of the product sold.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>(UnitPrice__c * Quantity__c) -  Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <inlineHelpText>Please enter the price per item.</inlineHelpText>
        <label>Price Per Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Product Item</label>
    <nameField>
        <displayFormat>InvP{0000000}</displayFormat>
        <label>Invoice Product Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IM_Code_Length_validation</fullName>
        <active>true</active>
        <description>This validation rule ensures that the IM Code is exactly 13 characters.</description>
        <errorConditionFormula>OR(LEN(Product_IM_Code__c) &gt;13, LEN(Product_IM_Code__c) &lt;13)</errorConditionFormula>
        <errorDisplayField>Product_IM_Code__c</errorDisplayField>
        <errorMessage>The Product IM Code cannot be less or more than 13 characters. Please enter a valid 13 character code.</errorMessage>
    </validationRules>
</CustomObject>